--- a/rush.yaml
+++ b/rush.yaml
@@ -11138,7 +11138,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent adds a card from the Graveyard to the hand.
+    When your opponent adds a card(s) from the Graveyard to the hand.
   de:
   es:
   fr:
@@ -25782,7 +25782,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 Defense Position monster on your opponent's field to face-up Attack Position. Then, if you changed a Normal Monster to face-up Attack Position by this effect, you can draw 1 card.
+    Change 1 Defense Position monster on your opponent's field to face-up Attack Position. If the monster changed to face-up Attack Position by this effect was a Normal Monster, you can draw 1 card.
   de:
   es:
   fr:
@@ -29129,7 +29129,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During the turn you Normal Summoned this card, place 1 WATER Attribute monster from your Graveyard on the bottom of the Deck.
+    During the turn you Normal Summoned this card, place 1 WATER Attribute monster from your Graveyard on the bottom of your Deck.
   de:
   es:
   fr:
@@ -29364,7 +29364,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on either side of the field loses ATK equal to [its Level] x 100 until the end of this turn. Then, inflict damage to your opponent equal to [that monster's Level] x 100.
+    1 face-up monster on the field loses ATK equal to [its Level] x 100 until the end of this turn. Then, inflict damage to your opponent equal to [that monster's Level] x 100.
   de:
   es:
   fr:
@@ -29785,7 +29785,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Place 2 Level 7 or higher Warrior Type monsters with different names from your Graveyard on the bottom of the Deck in any order.
+    Place 2 Level 7 or higher Warrior Type monsters with different names from your Graveyard on the bottom of your Deck in any order.
   de:
   es:
   fr:
@@ -30347,7 +30347,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Place 1 Plant Type monster from your Graveyard on the bottom of the Deck.
+    Place 1 Plant Type monster from your Graveyard on the bottom of your Deck.
   de:
   es:
   fr:
@@ -32009,7 +32009,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's monster declares an attack targeting your face-up Plant Type monster, place 2 Plant Type monsters from your Graveyard on the bottom of the Deck in any order.
+    When an opponent's monster declares an attack targeting your face-up Plant Type monster, place 2 Plant Type monsters from your Graveyard on the bottom of your Deck in any order.
   de:
   es:
   fr:
@@ -32139,7 +32139,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 5 or higher monster face-up while you have a face-up Winged Beast Type monster on your field.
+    When your opponent Normal or Special Summons a Level 5 or higher monster(s) face-up while you have a face-up Winged Beast Type monster on your field.
   de:
   es:
   fr:
@@ -43154,7 +43154,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Excavate the top card of your Deck. Then, place the excavated card on either the top or bottom of the Deck.
+    Excavate the top card of your Deck. Then, place the excavated card on either the top or bottom of your Deck.
   de:
   es:
   fr:
@@ -43663,7 +43663,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Place 1 card from your Graveyard on the bottom of the Deck.
+    Place 1 card from your Graveyard on the bottom of your Deck.
   de:
   es:
   fr:
@@ -45416,7 +45416,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Place 1 "Amusi Performer" or 1 "Howlingbird" from your Graveyard on the bottom of the Deck.
+    Place 1 "Amusi Performer" or 1 "Howlingbird" from your Graveyard on the bottom of your Deck.
   de:
   es:
   fr:
@@ -46077,7 +46077,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Place 1 Dinosaur Type monster from your Graveyard on the top or bottom of the Deck.
+    Place 1 Dinosaur Type monster from your Graveyard on either the top or bottom of your Deck.
   de:
   es:
   fr:
@@ -46176,7 +46176,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains ATK equal to [the number of Machine Type monsters in your Graveyard] x 200 until the end of this turn. Then, you can place 1 "Salary Slash" or 1 "Battle Demotion" from your Graveyard on the bottom of the Deck. If you do, you can draw 1 card.
+    This card gains ATK equal to [the number of Machine Type monsters in your Graveyard] x 200 until the end of this turn. Then, you can place 1 "Salary Slash" or 1 "Battle Demotion" from your Graveyard on the bottom of your Deck. If you do, you can draw 1 card.
   de:
   es:
   fr:
@@ -47258,7 +47258,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Return 1 face-up non-Level 3 Spellcaster Type monster from either side of the field to the owner's hand. Then, if you returned "Sevens Road Magician" to the hand by this effect, you can draw 1 card.
+    Return 1 face-up non-Level 3 Spellcaster Type monster from the field to the owner's hand. Then, if you returned "Sevens Road Magician" to the hand by this effect, you can draw 1 card.
   de:
   es:
   fr:
@@ -47293,8 +47293,6 @@ sets:
     rarities:
     - Secret Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 716644
@@ -49862,7 +49860,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If your opponent has a monster on their field, place 1 "Sea Dragon King Granganus" or 1 "Grand Extreme" from your Graveyard on the bottom of the Deck.
+    If your opponent has a monster on their field, place 1 "Sea Dragon King Granganus" or 1 "Grand Extreme" from your Graveyard on the bottom of your Deck.
   de:
   es:
   fr:
@@ -50916,7 +50914,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Place 3 Level 7 or higher monsters with different Types from your Graveyard on the top or bottom of the Deck in any order.
+    Place 3 Level 7 or higher monsters with different Types from your Graveyard on either the top or bottom of your Deck in any order.
   de:
   es:
   fr:
@@ -53730,7 +53728,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When a card is sent from your opponent's Deck to the Graveyard.
+    When a card(s) is sent from your opponent's Deck to the Graveyard.
   de:
   es:
   fr:
@@ -59364,7 +59362,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal Summons a monster, place 1 Field Spell Card from your Graveyard on the bottom of the Deck.
+    When your opponent Normal Summons a monster, place 1 Field Spell Card from your Graveyard on the bottom of your Deck.
   de:
   es:
   fr:
@@ -59427,7 +59425,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 7 or higher monster face-up while you have a face-up Reptile Type monster on your field.
+    When your opponent Normal or Special Summons a Level 7 or higher monster(s) face-up while you have a face-up Reptile Type monster on your field.
   de:
   es:
   fr:
@@ -67389,7 +67387,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Place 1 Normal Monster from your Graveyard on the bottom of the Deck.
+    Place 1 Normal Monster from your Graveyard on the bottom of your Deck.
   de:
   es:
   fr:
@@ -67402,7 +67400,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card loses 500 ATK until the end of this turn. This turn, this card can attack directly.
+    This card loses 500 ATK until the end of this turn. This card can attack directly this turn.
   de:
   es:
   fr:
@@ -68058,7 +68056,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 8 or more DARK Attribute Spellcaster Type monsters in your Graveyard during your Main Phase this card was Special Summoned.
+    You have 8 or more DARK Attribute Spellcaster Type monsters in your Graveyard during your Main Phase that you Special Summoned this card.
   de:
   es:
   fr:
@@ -69850,7 +69848,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 7 or higher monster face-up.
+    When your opponent Normal or Special Summons a Level 7 or higher monster(s) face-up.
   de:
   es:
   fr:
@@ -76354,7 +76352,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 5 or higher monster face-up.
+    When your opponent Normal or Special Summons a Level 5 or higher monster(s) face-up.
   de:
   es:
   fr:
@@ -76555,7 +76553,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Special Summons a monster from the Graveyard face-up.
+    When your opponent Special Summons a monster(s) from the Graveyard face-up.
   de:
   es:
   fr:
@@ -83316,7 +83314,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Place 1 Spell/Trap Card from your Graveyard on the bottom of the Deck.
+    Place 1 Spell/Trap Card from your Graveyard on the bottom of your Deck.
   de:
   es:
   fr:
@@ -84793,7 +84791,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 5 or higher monster face-up, pay 500 LP.
+    When your opponent Normal or Special Summons a Level 5 or higher monster(s) face-up, pay 500 LP.
   de:
   es:
   fr:
@@ -90301,7 +90299,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 8 or lower monster face-up, send 1 face-up Level 5 or higher monster from your field to the Graveyard.
+    When your opponent Normal or Special Summons a Level 8 or lower monster(s) face-up, send 1 face-up Level 5 or higher monster from your field to the Graveyard.
   de:
   es:
   fr:
@@ -95506,7 +95504,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 7 or higher monster face-up while you have a face-up Level 7 or higher EARTH Attribute Machine Type monster on your field.
+    When your opponent Normal or Special Summons a Level 7 or higher monster(s) face-up while you have a face-up Level 7 or higher EARTH Attribute Machine Type monster on your field.
   de:
   es:
   fr:
@@ -96547,7 +96545,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Reduce the Level of 1 face-up Level 4 or higher monster on either field by 3 until the end of this turn. Then, this card gains 500 ATK until the end of this turn. Then, if you have "Transamu Rainac" in your Graveyard, this card's name becomes "Transamu Rainac" this turn.
+    Reduce the Level of 1 face-up Level 4 or higher monster on the field by 3 until the end of this turn. Then, this card gains 500 ATK until the end of this turn. Then, if you have "Transamu Rainac" in your Graveyard, this card's name becomes "Transamu Rainac" this turn.
   de:
   es:
   fr:
@@ -97531,7 +97529,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Excavate the top 4 cards of your Deck. You can add up to 2 excavated "Dark Magician" and/or "Dark Magician Girl" to your hand. Place the remaining cards on the bottom of the Deck in any order.
+    Excavate the top 4 cards of your Deck. You can add up to 2 excavated "Dark Magician" and/or "Dark Magician Girl" to your hand. Place the remaining cards on the bottom of your Deck in any order.
   de:
   es:
   fr:
@@ -99589,7 +99587,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have 5 or more Sea Serpent Type monsters in your Graveyard, place all monsters from your Graveyard on the bottom of the Deck in any order.
+    If you have 5 or more Sea Serpent Type monsters in your Graveyard, place all monsters from your Graveyard on the bottom of your Deck in any order.
   de:
   es:
   fr:
@@ -99603,7 +99601,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 monster on your opponent's field. Then, if this card is in Maximum Mode and you returned 3 or more Maximum Monsters to the Deck to meet the requirement, you can destroy all cards on your opponent's field.
+    Destroy 1 monster on your opponent's field. Then, if this card is in Maximum Mode and you returned 3 or more Maximum Monsters to your Deck to meet the requirement, you can destroy all cards on your opponent's field.
   de:
   es:
   fr:
@@ -100519,7 +100517,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Place up to 3 Sea Serpent Type monsters from your Graveyard on the bottom of the Deck in any order. Then, you can Special Summon 1 Level 4 or lower Sea Serpent Type monster from your Graveyard to your field in face-up Attack Position. Then, if you have no monsters in your Graveyard, you can destroy 1 face-up Level 8 or lower monster on your opponent's field.
+    Place up to 3 Sea Serpent Type monsters from your Graveyard on the bottom of your Deck in any order. Then, you can Special Summon 1 Level 4 or lower Sea Serpent Type monster from your Graveyard to your field in face-up Attack Position. Then, if you have no monsters in your Graveyard, you can destroy 1 face-up Level 8 or lower monster on your opponent's field.
   de:
   es:
   fr:
@@ -101351,7 +101349,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When a card is returned from either Graveyard to the Deck.
+    When a card(s) is returned from either Graveyard to the Deck.
   de:
   es:
   fr:
@@ -101481,7 +101479,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When a card is sent to your opponent's Graveyard, send 1 other Spell/Trap Card from your field to the Graveyard.
+    When a card(s) is sent to your opponent's Graveyard, send 1 other Spell/Trap Card from your field to the Graveyard.
   de:
   es:
   fr:
@@ -101619,7 +101617,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 5 or higher monster face-up.
+    When your opponent Normal or Special Summons a Level 5 or higher monster(s) face-up.
   de:
   es:
   fr:
@@ -103521,7 +103519,7 @@ effect_types:
 - Effect
 effect:
   en: |-
-    Your opponent chooses 1 card on their field, and you destroy 1 other card on either field.
+    Your opponent chooses 1 card on their field, and you destroy 1 other card on the field.
   de:
   es:
   fr:
@@ -103596,7 +103594,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 monster on either field.
+    Destroy 1 monster on the field.
   de:
   es:
   fr:
@@ -104589,7 +104587,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Place 1 "Fusion" from your Graveyard on either the top or bottom of the Deck.
+    Place 1 "Fusion" from your Graveyard on either the top or bottom of your Deck.
   de:
   es:
   fr:
@@ -104864,7 +104862,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 face-up card on either field. Then, if you sent a monster whose original Level is 7 or higher to the Graveyard to meet the requirement, you can Special Summon 1 "Blue Tooth Burst Dragon" from your Graveyard face-up to your field.
+    Destroy 1 face-up card on the field. Then, if you sent a monster whose original Level is 7 or higher to the Graveyard to meet the requirement, you can Special Summon 1 "Blue Tooth Burst Dragon" from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -105123,7 +105121,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 Spell/Trap Card on either field. Then, this turn, this card gains 500 ATK and can attack twice.
+    Destroy 1 Spell/Trap Card on the field. Then, this turn, this card gains 500 ATK and can attack twice.
   de:
   es:
   fr:
@@ -106647,7 +106645,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Special Summons a monster while you have a Level 6 or higher Spellcaster Type monster on your field equipped with an Equip Spell Card.
+    When your opponent Special Summons a monster(s) while you have a Level 6 or higher Spellcaster Type monster on your field equipped with an Equip Spell Card.
   de:
   es:
   fr:
@@ -106779,7 +106777,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 8 or lower monster face-up, send 1 monster from your field to the Graveyard.
+    When your opponent Normal or Special Summons a Level 8 or lower monster(s) face-up, send 1 monster from your field to the Graveyard.
   de:
   es:
   fr:
@@ -106911,7 +106909,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 8 or lower monster face-up, shuffle 3 LIGHT Attribute Spellcaster Type monsters from your Graveyard into the Deck.
+    When your opponent Normal or Special Summons a Level 8 or lower monster(s) face-up, shuffle 3 LIGHT Attribute Spellcaster Type monsters from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -106976,7 +106974,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Special Summons a monster from the hand or Graveyard.
+    When your opponent Special Summons a monster(s) from the hand or Graveyard.
   de:
   es:
   fr:
@@ -108357,7 +108355,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Place 1 Spell Card from your Graveyard on either the top or bottom of the Deck.
+    Place 1 Spell Card from your Graveyard on either the top or bottom of your Deck.
   de:
   es:
   fr:
@@ -110058,7 +110056,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 7 or higher monster face-up, send all monsters from your field to the Graveyard.
+    When your opponent Normal or Special Summons a Level 7 or higher monster(s) face-up, send all monsters from your field to the Graveyard.
   de:
   es:
   fr:
@@ -110190,7 +110188,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Place 1 card from either field on top of the owner's Deck.
+    Place 1 card from the field on top of the owner's Deck.
   de:
   es:
   fr:
@@ -110988,7 +110986,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Return 1 face-up Level 5 or higher EARTH Attribute Machine Type monster other than this card from your field to the owner's hand.
+    Return 1 other face-up Level 5 or higher EARTH Attribute Machine Type monster from your field to the owner's hand.
   de:
   es:
   fr:
@@ -111919,7 +111917,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 face-down Defense Position monster on either side of the field to face-up Attack Position. Then, this card loses 1300 ATK until the end of this turn.
+    Change 1 face-down Defense Position monster on the field to face-up Attack Position. Then, this card loses 1300 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -114646,7 +114644,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When a card is sent to your opponent's Graveyard during their Main Phase.
+    When a card(s) is sent to your opponent's Graveyard during their Main Phase.
   de:
   es:
   fr:
@@ -114710,7 +114708,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons an Effect Monster face-up.
+    When your opponent Normal or Special Summons an Effect Monster(s) face-up.
   de:
   es:
   fr:
@@ -120152,7 +120150,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent draws a card during their turn, or when your opponent Normal or Special Summons a monster during their turn, send 1 monster from your field to the Graveyard.
+    When your opponent draws a card(s) during their turn, or when your opponent Normal or Special Summons a monster during their turn, send 1 monster from your field to the Graveyard.
   de:
   es:
   fr:
@@ -120737,7 +120735,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -120751,7 +120750,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    通常モンスター（闇属性）を攻撃表示でアドバンス召喚する場合、表側表示のこのカードは２体分のリリースにできる。
   ko:
   zh-TW:
   zh-CN:
