--- a/data/rush/17014.yaml
+++ b/data/rush/17014.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Your opponent takes the bottom 5 cards of their Deck and shows them. Inflict damage to your opponent equal to [the number of monsters among the shown cards] x 400. Your opponent places the shown cards on top of their Deck in any order.
+    Your opponent takes the bottom 5 cards of their Deck and shows them. Inflict damage to your opponent equal to [the number of monsters among the shown cards] x 400. Your opponent places the shown cards on the top of their Deck in any order.
   de:
   es:
   fr:
