--- a/data/rush/16795.yaml
+++ b/data/rush/16795.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If a face-up Field Spell Card is on the field during the turn you Normal Summoned this card.
+    A face-up Field Spell Card is on the field the turn you Normal Summoned this card.
   de:
   es:
   fr:
