--- a/data/rush/17027.yaml
+++ b/data/rush/17027.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Inflict 300 damage to your opponent. This turn, you take no battle damage.
+    Inflict 300 damage to your opponent. You take no battle damage this turn.
   de:
   es:
   fr:
