--- a/data/rush/17293.yaml
+++ b/data/rush/17293.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. Then, if a Reptile Type Normal Monster(s) is among the cards sent, add 1 Reptile Type Normal Monster from your Graveyard to your hand. You can only attack with Reptile Type monsters the turn you activated this effect.
+    Send the top 3 cards of your Deck to the Graveyard. If a Reptile Type Normal Monster(s) is among the cards sent, add 1 Reptile Type Normal Monster from your Graveyard to your hand. You can only attack with Reptile Type monsters the turn you activated this effect.
   de:
   es:
   fr:
