--- a/data/rush/17501.yaml
+++ b/data/rush/17501.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up Galaxy Type monster on your field cannot be destroyed by your opponent's Trap Card effects.
+    1 face-up Galaxy Type monster on your field cannot be destroyed by your opponent's Trap Card effects this turn.
   de:
   es:
   fr:
