--- a/data/rush/18938.yaml
+++ b/data/rush/18938.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have "Celeb Rose Magician" or an Equip Spell Card in your Graveyard during the turn you Normal Summoned this card.
+    You have "Celeb Rose Magician" or an Equip Spell Card in your Graveyard the turn you Normal Summoned this card.
   de:
   es:
   fr:
