--- a/data/rush/19296.yaml
+++ b/data/rush/19296.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Excavate the top 3 cards of your Deck. You can add 1 excavated Level 3 or higher Reptile Type monster to your hand. Place the remaining cards on the top of the Deck in any order.
+    Excavate the top 3 cards of your Deck. You can add 1 excavated Level 3 or higher Reptile Type monster to your hand. Place the remaining cards on the top of your Deck in any order.
   de:
   es:
   fr:
