--- a/data/rush/19321.yaml
+++ b/data/rush/19321.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    All face-up monsters on your opponent's field lose ATK equal to [the number of monsters on your opponent's field] x 700 until the end of this turn. Then, you gain LP equal to [the number of monsters on your opponent's field] x 700.
+    All face-up monsters on your opponent's field lose ATK equal to [the number of monsters on your opponent's field] x 700 until the end of this turn. Then, gain LP equal to [the number of monsters on your opponent's field] x 700.
   de:
   es:
   fr:
