--- a/data/rush/19324.yaml
+++ b/data/rush/19324.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Excavate the top 3 cards of your Deck. Add 1 excavated card to your hand. Place the remaining cards on top of the Deck in any order, or send them to the Graveyard.
+    Excavate the top 3 cards of your Deck. Add 1 excavated card to your hand. Place the remaining cards on the top of your Deck in any order, or send them to the Graveyard.
   de:
   es:
   fr:
