--- a/data/rush/17014.yaml
+++ b/data/rush/17014.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Your opponent takes the bottom 5 cards of their Deck and shows them. Inflict damage to your opponent equal to [the number of monsters among the shown cards] x 400. Your opponent places the shown cards on the top of their Deck in any order.
+    Your opponent excavates the bottom 5 cards of their Deck and shows them. Inflict damage to your opponent equal to [the number of monsters among the shown cards] x 400.
   de:
   es:
   fr:
@@ -58,7 +58,4 @@ sets:
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715336
