--- a/data/rush/19323.yaml
+++ b/data/rush/19323.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Special Summoned, shuffle 1 non-Magical Knight Type monster from your Graveyard into the Deck.
+    During your Main Phase that you Special Summoned this card, shuffle 1 non-Magical Knight Type monster from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -29,7 +29,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● This turn, this card can attack directly.
+    ● This card can attack directly this turn.
     ● Destroy 1 Spell/Trap Card on your opponent's field.
   de:
   es:
