--- a/data/rush/16693.yaml
+++ b/data/rush/16693.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 200 ATK until the end of this turn. Then, you can add up to 1 each of "Jurassic World" and "Wasteland" from your Graveyard to your hand.
+    This card gains 200 ATK until the end of this turn. Then, you can add 1 "Jurassic World" and/or 1 "Wasteland" from your Graveyard to your hand.
   de:
   es:
   fr:
