--- a/data/rush/17269.yaml
+++ b/data/rush/17269.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card can attack directly.
+    This card can attack directly this turn.
   de:
   es:
   fr:
