--- a/data/rush/18249.yaml
+++ b/data/rush/18249.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Place 1 face-up Level 8 or lower monster from your opponent's field on the bottom of the owner's Deck. This turn, this card cannot attack directly.
+    Place 1 face-up Level 8 or lower monster from your opponent's field on the bottom of the owner's Deck. This card cannot attack directly this turn.
   de:
   es:
   fr:
