--- a/data/rush/18376.yaml
+++ b/data/rush/18376.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card gains 1000 ATK and cannot be destroyed by card effects. Then, if you activated this effect during your Main Phase this card was Special Summoned, you can add 1 "Dark Hole" from your Graveyard to your hand.
+    This turn, this card gains 1000 ATK and cannot be destroyed by card effects. Then, if you activated this effect during your Main Phase that you Special Summoned this card, you can add 1 "Dark Hole" from your Graveyard to your hand.
   de:
   es:
   fr:
