--- a/data/rush/18463.yaml
+++ b/data/rush/18463.yaml
@@ -28,7 +28,7 @@ summoning_condition:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase that you Normal Summoned or Special Summoned this card, place 1 card from your hand on top of the Deck.
+    During your Main Phase that you Normal Summoned or Special Summoned this card, place 1 card from your hand on the top of the Deck.
   de:
   es:
   fr:
