--- a/data/rush/18599.yaml
+++ b/data/rush/18599.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    If this card attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Also, if you activated this effect during your Main Phase this card was Special Summoned, you can destroy 1 face-up Level 7 or 8 monster on your opponent's field.
+    If this card attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Also, if you activated this effect during your Main Phase that you Special Summoned this card, you can destroy 1 face-up Level 7 or 8 monster on your opponent's field.
   de:
   es:
   fr:
