--- a/data/rush/18716.yaml
+++ b/data/rush/18716.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have a face-up Beast Type monster on your field other than this card, place 1 Beast Type monster from your Graveyard on top of the Deck.
+    If you have a face-up Beast Type monster on your field other than this card, place 1 Beast Type monster from your Graveyard on top of your Deck.
   de:
   es:
   fr:
