--- a/data/rush/19589.yaml
+++ b/data/rush/19589.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon up to 1 each of "Giftarist", "Romic n' Roller", "Berry Bassist", "Dream Drummer", and "Keytar Kid" from your Graveyard face-up to your field. You can only attack with Omega Psychic or Psychic Type monsters this turn.
+    Special Summon 1 "Giftarist", 1 "Romic n' Roller", 1 "Berry Bassist", 1 "Dream Drummer", and/or 1 "Keytar Kid" from your Graveyard face-up to your field. You can only attack with Omega Psychic or Psychic Type monsters this turn.
   de:
   es:
   fr:
