--- a/data/rush/yugipedia1004608.yaml
+++ b/data/rush/yugipedia1004608.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    (TBA)
+    During the turn you Normal Summoned this card, reveal 1 LIGHT Attribute Spellcaster Type monster or 1 Equip Spell Card in your hand to your opponent.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    (TBA)
+    Send the top 4 cards of your Deck to the Graveyard. Then, you can add 1 "Celeb Rose Magician", 1 "Celeb Rose Witch", or 1 "Fusion" from among the cards sent to the Graveyard by this effect to your hand.
   de:
   es:
   fr:
@@ -37,7 +37,7 @@ effect:
   zh-TW:
   zh-CN:
 card_type: Monster
-monster_type_line: Spellcaster / ???
+monster_type_line: Spellcaster / Effect
 attribute: LIGHT
 level: 1
 atk: 1000
@@ -46,12 +46,14 @@ series:
 - Celeb Rose
 images:
 - index: 1
-  image: CelebRoseWiz-OW.png
+  image: CelebRoseWiz-RDKP15-JP-OP.png
 sets:
   ja:
-  - set_number: RD/KP15-JP0??
+  - set_number: RD/KP15-JP008
     set_name: Red Reboot of Darkness
     rarities:
+    - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
