--- a/data/rush/yugipedia1020975.yaml
+++ b/data/rush/yugipedia1020975.yaml
@@ -26,7 +26,7 @@ summoning_condition:
   zh-CN:
 requirement:
   en: |-
-    During the turn you Normal Summoned this card by the above way.
+    During the turn you Normal Summoned this card the above way.
   de:
   es:
   fr:
