--- a/rush.yaml
+++ b/rush.yaml
@@ -120903,7 +120903,7 @@ summoning_condition:
   zh-CN:
 requirement:
   en: |-
-    During the turn you Normal Summoned this card by the above way.
+    During the turn you Normal Summoned this card the above way.
   de:
   es:
   fr:
