--- a/data/rush/yugipedia1004608.yaml
+++ b/data/rush/yugipedia1004608.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに、手札のモンスター（光属性／魔法使い族）１体または装備魔法カード１枚を相手に見せて発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカード４枚を墓地へ送る。その後、この効果で墓地へ送られたカードの中から「セレブローズ・マジシャン」「セレブローズ・ウィッチ」「フュージョン」のいずれか１枚を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
