--- a/data/rush/yugipedia1020976.yaml
+++ b/data/rush/yugipedia1020976.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの元々の攻撃力が１００以上の表側表示の効果モンスター１体を選び、その攻撃力をターン終了時まで、［その元々の攻撃力］だけダウンする。その後、選んだモンスターの永続効果をターン終了時まで無効にできる。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「ギャラクティカ・オブリビオン」＋「ダークネス・ドワーフ」
   ko:
   zh-TW:
   zh-CN:
