--- a/data/rush/yugipedia1020980.yaml
+++ b/data/rush/yugipedia1020980.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル７・８／ギャラクシー族）１体または「フュージョン」１枚を選んで手札に加える。さらにこのターン、モンスター（レベル８／ギャラクシー族）を攻撃表示でアドバンス召喚する場合、表側表示のこのカードは２体分または３体分のリリースにできる。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「ダークネス・ドワーフ」＋モンスター（光属性・闇属性／ギャラクシー族）
   ko:
   zh-TW:
   zh-CN:
