--- a/data/rush/18754.yaml
+++ b/data/rush/18754.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 10 or more cards in your Deck and no other monsters on your field.
+    You have 10 or more cards in your Deck and you have no other monsters on your field.
   de:
   es:
   fr:
