--- a/data/rush/19585.yaml
+++ b/data/rush/19585.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, up to 2 face-up Omega Psychic and/or Psychic Type monsters on your field gain 900 ATK, and if they attack a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+    This turn, up to 2 face-up Omega Psychic Type and/or Psychic Type monsters on your field gain 900 ATK, and if they attack a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
