--- a/data/rush/yugipedia1020974.yaml
+++ b/data/rush/yugipedia1020974.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード以外の自分フィールドの表側表示モンスター（ギャラクシー族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを含む自分フィールドの表側表示モンスターを素材として墓地へ送り、モンスター（闇属性）をフュージョン召喚する。
   ko:
   zh-TW:
   zh-CN:
