--- a/data/rush/16348.yaml
+++ b/data/rush/16348.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, face-up LIGHT Attribute Fiend Type monsters on the field cannot be destroyed by Trap Card effects.
+    While this card is face-up in the Field Zone, all face-up LIGHT Attribute Fiend Type monsters on the field cannot be destroyed by Trap Card effects.
   de:
   es:
   fr:
