--- a/data/rush/16706.yaml
+++ b/data/rush/16706.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, all face-up FIRE Attribute monsters on the field gain 300 ATK.
+    While this card is face-up in the Field Zone, face-up FIRE Attribute monsters on the field gain 300 ATK.
   de:
   es:
   fr:
