--- a/data/rush/16799.yaml
+++ b/data/rush/16799.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, all face-up non-EARTH Attribute monsters on the field lose 300 ATK/DEF.
+    While this card is face-up in the Field Zone, face-up non-EARTH Attribute monsters on the field lose 300 ATK/DEF.
   de:
   es:
   fr:
