--- a/data/rush/16897.yaml
+++ b/data/rush/16897.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, face-up non-LIGHT Attribute monsters on the field lose 300 ATK, and face-up Level 9 LIGHT Attribute monsters on the field cannot be destroyed by Trap Card effects.
+    While this card is face-up in the Field Zone, face-up non-LIGHT Attribute monsters on the field lose 300 ATK, and all face-up Level 9 LIGHT Attribute monsters on the field cannot be destroyed by Trap Card effects.
   de:
   es:
   fr:
