--- a/data/rush/19119.yaml
+++ b/data/rush/19119.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change the attacking monster to face-up Defense Position. Then, if your LP are less than or equal to your opponent's, you can destroy 1 Attack Position monster on your opponent's field. Then, inflict damage to your opponent equal to [the original ATK of the monster destroyed by this effect].
+    Change the attacking monster to face-up Defense Position. Then, if your LP are lower than or equal to your opponent's, you can destroy 1 Attack Position monster on your opponent's field. Then, inflict damage to your opponent equal to [the original ATK of the monster destroyed by this effect].
   de:
   es:
   fr:
