--- a/data/rush/18306.yaml
+++ b/data/rush/18306.yaml
@@ -49,10 +49,17 @@ series:
 images:
 - index: 1
   image: CombustionOniBunsel-RDSJMP-JP-NPR.png
+  illustration: CombustionOniBunsel-G002-JP-VG-artwork.png
+- index: 2
+  image: CombustionOniBunsel-RDECG1-JP-OP.png
 sets:
   ja:
   - set_number: RD/SJMP-JP020
     set_name: Saikyō Jump November 2022 promotional card
+    rarities:
+    - Normal Parallel Rare
+  - set_number: RD/ECG1-JP019
+    set_name: Rush Duel Card Game Gum
     rarities:
     - Normal Parallel Rare
   ko:
