--- a/data/rush/18333.yaml
+++ b/data/rush/18333.yaml
@@ -49,10 +49,17 @@ series:
 images:
 - index: 1
   image: JointechRaptor-RDSJMP-JP-NPR.png
+  illustration: JointechRaptor-G002-JP-VG-artwork.png
+- index: 2
+  image: JointechRaptor-RDECG1-JP-OP.png
 sets:
   ja:
   - set_number: RD/SJMP-JP021
     set_name: Saikyō Jump December 2022 promotional card
+    rarities:
+    - Normal Parallel Rare
+  - set_number: RD/ECG1-JP017
+    set_name: Rush Duel Card Game Gum
     rarities:
     - Normal Parallel Rare
   ko:
