--- a/rush.yaml
+++ b/rush.yaml
@@ -85588,10 +85588,17 @@ series:
 images:
 - index: 1
   image: CombustionOniBunsel-RDSJMP-JP-NPR.png
+  illustration: CombustionOniBunsel-G002-JP-VG-artwork.png
+- index: 2
+  image: CombustionOniBunsel-RDECG1-JP-OP.png
 sets:
   ja:
   - set_number: RD/SJMP-JP020
     set_name: Saikyō Jump November 2022 promotional card
+    rarities:
+    - Normal Parallel Rare
+  - set_number: RD/ECG1-JP019
+    set_name: Rush Duel Card Game Gum
     rarities:
     - Normal Parallel Rare
   ko:
@@ -85724,10 +85731,17 @@ series:
 images:
 - index: 1
   image: JointechRaptor-RDSJMP-JP-NPR.png
+  illustration: JointechRaptor-G002-JP-VG-artwork.png
+- index: 2
+  image: JointechRaptor-RDECG1-JP-OP.png
 sets:
   ja:
   - set_number: RD/SJMP-JP021
     set_name: Saikyō Jump December 2022 promotional card
+    rarities:
+    - Normal Parallel Rare
+  - set_number: RD/ECG1-JP017
+    set_name: Rush Duel Card Game Gum
     rarities:
     - Normal Parallel Rare
   ko:
