--- a/data/rush/15665.yaml
+++ b/data/rush/15665.yaml
@@ -59,12 +59,19 @@ series:
 images:
 - index: 1
   image: RoyalRebelsRocker-RDCP01-JP-SR.png
+  illustration: RoyalRebelsRocker-DBR-JP-VG-artwork.png
+- index: 2
+  image: RoyalRebelsRocker-RDECG1-JP-OP.png
 sets:
   ja:
   - set_number: RD/CP01-JP017
     set_name: Character Pack - Gavin/Roa/Romin
     rarities:
     - Super Rare
+  - set_number: RD/ECG1-JP015
+    set_name: Rush Duel Card Game Gum
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/CP01-KR017
     set_name: Character Pack - Gavin/Roa/Romin
