--- a/rush.yaml
+++ b/rush.yaml
@@ -13089,12 +13089,19 @@ series:
 images:
 - index: 1
   image: RoyalRebelsRocker-RDCP01-JP-SR.png
+  illustration: RoyalRebelsRocker-DBR-JP-VG-artwork.png
+- index: 2
+  image: RoyalRebelsRocker-RDECG1-JP-OP.png
 sets:
   ja:
   - set_number: RD/CP01-JP017
     set_name: Character Pack - Gavin/Roa/Romin
     rarities:
     - Super Rare
+  - set_number: RD/ECG1-JP015
+    set_name: Rush Duel Card Game Gum
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/CP01-KR017
     set_name: Character Pack - Gavin/Roa/Romin
@@ -121351,6 +121358,64 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1020989
+---
+konami_id:
+name:
+  en: Silver's Cry
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have not activated "Silver's Cry" this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分が「銀龍の轟咆」を発動していないターンに発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Dragon Type Normal Monster from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分の墓地の通常モンスター（ドラゴン族）１体を選び、自分フィールドに表側表示で特殊召喚する。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Blue-Eyes
+images:
+- index: 1
+  image: SilversCry-RDECG1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ECG1-JP010
+    set_name: Rush Duel Card Game Gum
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1021590
 ---
 konami_id:
 name:
