--- a/data/cards/06859683.yaml
+++ b/data/cards/06859683.yaml
@@ -37,7 +37,11 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: SuccessProbability0-LCGX-EN-C-1E.jpg
+  image: SuccessProbability0-EE04-JP-C.jpg
+  illustration: SuccessProbability0-MADU-JP-VG-artwork.png
+- index: '1.1'
+  image: SuccessProbability0-LCGX-EN-C-UE.png
+  illustration: SuccessProbability0-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: SOI-EN057
