--- a/data/cards/13331639.yaml
+++ b/data/cards/13331639.yaml
@@ -182,6 +182,10 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
     - Ultimate Rare
+  - set_number: AGOV-KRS01
+    set_name: Age of Overlord +1 Bonus Pack
+    rarities:
+    - Quarter Century Secret Rare
   zh-CN:
   - set_number: CL03-SC088
     set_name: Classic Pack 03
