--- a/data/rush/yugipedia1021590.yaml
+++ b/data/rush/yugipedia1021590.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have not activated "Silver's Cry" this turn.
+    During a turn you have not activated "Silver's Cry".
   de:
   es:
   fr:
