--- a/rush.yaml
+++ b/rush.yaml
@@ -121375,7 +121375,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have not activated "Silver's Cry" this turn.
+    During a turn you have not activated "Silver's Cry".
   de:
   es:
   fr:
