--- a/data/cards/35058857.yaml
+++ b/data/cards/35058857.yaml
@@ -43,7 +43,11 @@ atk: 900
 def: 600
 images:
 - index: 1
+  image: MagicalKingMoonstar-SD46-JP-C.png
+  illustration: MagicalKingMoonstar-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: MagicalKingMoonstar-SDCK-EN-C-1E.png
+  illustration: MagicalKingMoonstar-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: PGL3-EN004
