--- a/data/cards/59771339.yaml
+++ b/data/cards/59771339.yaml
@@ -53,7 +53,11 @@ series:
 - Junk
 images:
 - index: 1
+  image: JunkBerserker-EXVC-JP-UR.jpg
+  illustration: JunkBerserker-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: JunkBerserker-LC5D-EN-SR-1E.png
+  illustration: JunkBerserker-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: EXVC-EN037
