--- a/data/cards/79279397.yaml
+++ b/data/cards/79279397.yaml
@@ -41,7 +41,11 @@ atk: 100
 def: 1000
 images:
 - index: 1
+  image: DBoyz-EP12-JP-C.png
+  illustration: DBoyz-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: DBoyz-SGX3-EN-C-1E.png
+  illustration: DBoyz-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: PHSW-EN084
