--- a/data/cards/19980975.yaml
+++ b/data/cards/19980975.yaml
@@ -8,7 +8,7 @@ name:
   it: Ciclone di Polvere di Diamanti
   pt: Ciclone de Poeira de Diamante
   ja: ダイヤモンドダスト・サイクロン
-  ja_romaji: Daiyamondodasuto Saikuron
+  ja_romaji: Daiyamondo Dasuto Saikuron
   ko: 다이아몬드더스트 싸이크론
   ko_rr:
   zh-TW:
