--- a/data/rush/yugipedia1019081.yaml
+++ b/data/rush/yugipedia1019081.yaml
@@ -14,25 +14,27 @@ name:
   zh-CN:
 requirement:
   en: |-
-    TBA
+    The total Levels of the face-up monsters on your opponent's field are 10 or higher during your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示モンスターのレベルの合計が１０以上の場合、このカードを召喚・特殊召喚した自分メインフェイズに発動できる。
   ko:
   zh-TW:
   zh-CN:
 effect:
   en: |-
-    TBA
+    Add 1 DARK Attribute Dragon Type or Fiend Type monster with 1200 DEF from your Graveyard to your hand. Your Level 6 or lower Effect Monsters cannot attack this turn.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（闇属性／ドラゴン族･悪魔族／守備力１２００）１体を選んで手札に加える。このターン、自分は効果モンスター（レベル６以下）で攻撃できない。
   ko:
   zh-TW:
   zh-CN:
