--- a/data/rush/yugipedia1019081.yaml
+++ b/data/rush/yugipedia1019081.yaml
@@ -34,7 +34,7 @@ effect:
   it:
   pt:
   ja: |-
-    自分の墓地のモンスター（闇属性／ドラゴン族･悪魔族／守備力１２００）１体を選んで手札に加える。このターン、自分は効果モンスター（レベル６以下）で攻撃できない。
+    自分の墓地のモンスター（闇属性／ドラゴン族・悪魔族／守備力１２００）１体を選んで手札に加える。このターン、自分は効果モンスター（レベル６以下）で攻撃できない。
   ko:
   zh-TW:
   zh-CN:
