--- a/data/cards/05053103.yaml
+++ b/data/cards/05053103.yaml
@@ -113,6 +113,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: DEM5-DE002
+    set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
   fr:
   - set_number: DDK-F004
     set_name: 'Starter Deck: Kaiba'
@@ -167,6 +171,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: DEM5-IT002
+    set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
   pt:
   - set_number: DIK-P005
     set_name: 'Starter Deck: Kaiba'
@@ -190,6 +198,10 @@ sets:
     - Common
   - set_number: SS02-PTA02
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
+    rarities:
+    - Common
+  - set_number: DEM5-PT002
+    set_name: Speed Duel Demo Deck
     rarities:
     - Common
   ja:
