--- a/data/cards/34016756.yaml
+++ b/data/cards/34016756.yaml
@@ -131,6 +131,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Destiny Masters'
     rarities:
     - Common
+  - set_number: DEM5-DE008
+    set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
   - set_number: SBTK-DESP4
     set_name: 'Speed Duel: Trials of the Kingdom Sneak Peek participation cards'
     rarities:
@@ -219,6 +223,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Destiny Masters'
     rarities:
     - Common
+  - set_number: DEM5-IT008
+    set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
   - set_number: SBTK-ITSP4
     set_name: 'Speed Duel: Trials of the Kingdom Sneak Peek participation cards'
     rarities:
@@ -243,6 +251,10 @@ sets:
     - Common
   - set_number: SS01-PTA12
     set_name: 'Speed Duel Starter Decks: Destiny Masters'
+    rarities:
+    - Common
+  - set_number: DEM5-PT008
+    set_name: Speed Duel Demo Deck
     rarities:
     - Common
   - set_number: SBTK-PTSP4
