--- a/data/cards/63695531.yaml
+++ b/data/cards/63695531.yaml
@@ -99,6 +99,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Destiny Masters'
     rarities:
     - Common
+  - set_number: DEM5-DE007
+    set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
   fr:
   - set_number: DR1-FR010
     set_name: Dark Revelation Volume 1
@@ -145,6 +149,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Destiny Masters'
     rarities:
     - Common
+  - set_number: DEM5-IT007
+    set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
   pt:
   - set_number: DR1-PT010
     set_name: Dark Revelation Volume 1
@@ -152,6 +160,10 @@ sets:
     - Common
   - set_number: SS01-PTB02
     set_name: 'Speed Duel Starter Decks: Destiny Masters'
+    rarities:
+    - Common
+  - set_number: DEM5-PT007
+    set_name: Speed Duel Demo Deck
     rarities:
     - Common
   ja:
