--- a/data/cards/64271667.yaml
+++ b/data/cards/64271667.yaml
@@ -81,6 +81,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: DEM5-DE005
+    set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
   fr:
   - set_number: MDP2-FR008
     set_name: McDonald's Promotional Cards 2
@@ -107,9 +111,17 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: DEM5-IT005
+    set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
   pt:
   - set_number: SS02-PTB02
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
+    rarities:
+    - Common
+  - set_number: DEM5-PT005
+    set_name: Speed Duel Demo Deck
     rarities:
     - Common
   ja:
