--- a/data/cards/88819587.yaml
+++ b/data/cards/88819587.yaml
@@ -129,6 +129,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: DEM5-DE004
+    set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
   - set_number: MRD-DE061
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
@@ -207,6 +211,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: DEM5-IT004
+    set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
   - set_number: MRD-IT061
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
@@ -234,6 +242,10 @@ sets:
     - Common
   - set_number: SS02-PTB06
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
+    rarities:
+    - Common
+  - set_number: DEM5-PT004
+    set_name: Speed Duel Demo Deck
     rarities:
     - Common
   - set_number: MRD-PT061
