--- a/data/cards/98495314.yaml
+++ b/data/cards/98495314.yaml
@@ -77,6 +77,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Destiny Masters'
     rarities:
     - Common
+  - set_number: DEM5-DE009
+    set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
   - set_number: MRD-DE132
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
@@ -107,6 +111,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Destiny Masters'
     rarities:
     - Common
+  - set_number: DEM5-IT009
+    set_name: Speed Duel Demo Deck
+    rarities:
+    - Common
   - set_number: MRD-IT132
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
@@ -118,6 +126,10 @@ sets:
     - Common
   - set_number: SS01-PTC14
     set_name: 'Speed Duel Starter Decks: Destiny Masters'
+    rarities:
+    - Common
+  - set_number: DEM5-PT009
+    set_name: Speed Duel Demo Deck
     rarities:
     - Common
   - set_number: MRD-PT132
