--- a/data/cards/86605515.yaml
+++ b/data/cards/86605515.yaml
@@ -73,6 +73,9 @@ sets:
     set_name: V Jump July 2022 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 24PP-JP???
+    set_name: Premium Pack 2024
+    rarities:
   ko:
   - set_number: 23PP-KRB08
     set_name: Premium Pack 2023 2nd Wave
