--- a/data/rush/16304.yaml
+++ b/data/rush/16304.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Your opponent has a face-up Level 7 or higher monster on their field and you have 2 face-up non-Level 3 Dragon Type monsters on your field.
+    Your opponent has a face-up Level 7 or higher monster and you have 2 face-up non-Level 3 Dragon Type monsters on your field.
   de:
   es:
   fr:
@@ -73,7 +73,4 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717239
