--- a/data/rush/16795.yaml
+++ b/data/rush/16795.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    A face-up Field Spell Card is on the field the turn you Normal Summoned this card.
+    You Normal Summoned this card this turn and a face-up Field Spell Card is on the field.
   de:
   es:
   fr:
