--- a/data/rush/18714.yaml
+++ b/data/rush/18714.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have "Trap Hole" in your Graveyard the turn you Normal Summoned this card.
+    You Normal Summoned this card this turn and you have "Trap Hole" in your Graveyard.
   de:
   es:
   fr:
