--- a/data/cards/yugipedia1022448.yaml
+++ b/data/cards/yugipedia1022448.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>Ｅ<rt>イー</rt></ruby><ruby>Ｍ<rt>エム</rt></ruby>：<ruby>Ｐ<rt>ピー</rt></ruby>グレニャード
-  ja_romaji: Īemu:Pī Gurenyādo
+  ja_romaji: Ī Emu:Pī Gurenyādo
   ko:
   ko_rr:
   zh-TW:
