--- a/data/rush/18253.yaml
+++ b/data/rush/18253.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Your opponent has 4 or less cards in their hand and you have 2 face-up non-Level 3 Psychic Type monsters on your field the turn you Normal Summoned this card.
+    You Normal Summoned this card this turn, your opponent has 4 or less cards in their hand, and you have 2 face-up non-Level 3 Psychic Type monsters on your field.
   de:
   es:
   fr:
