--- a/data/rush/18697.yaml
+++ b/data/rush/18697.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Your opponent has a monster on their field the turn you Normal Summoned this card.
+    You Normal Summoned this card this turn and your opponent has a monster on their field.
   de:
   es:
   fr:
