--- a/data/rush/19560.yaml
+++ b/data/rush/19560.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 10 or more cards in your Deck the turn you Normal Summoned this card.
+    You Normal Summoned this card this turn and you have 10 or more cards in your Deck.
   de:
   es:
   fr:
